tests/baselines/reference/parserComputedPropertyName28.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName28.ts(2,5): error TS1164: Computed property names are not allowed in class property declarations.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName28.ts(3,5): error TS1164: Computed property names are not allowed in class property declarations.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName28.ts (2 errors) ====
    class C {
        [e]: number = 0;
        ~~~
!!! error TS1164: Computed property names are not allowed in class property declarations.
        [e2]: number
        ~~~~
!!! error TS1164: Computed property names are not allowed in class property declarations.
    }